# REINVENT4

./: .env  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NEWS.md  README.md  _sampling.json  install.py  pyproject.toml  pytest.ini  sampling.csv  slurm_script.sh
.github/ISSUE_TEMPLATE/: general-issue-report.md
GB_GA/: GB_GA.py  README.md  crossover.py  mutate.py  run.py
configs/: PARAMS.md  README.md  SCORING.md  data_pipeline.toml  pepinvent.smi  scaffolds.smi  scoring.toml  scoring_components_example.toml  stage1_scoring.toml  stage2_scoring.toml  staged_learning.toml  toml2json.py  transfer_learning.toml  warheads.smi
configs/json/: sampling.json  scoring.json  stage1_scoring.json  stage2_scoring.json  staged_learning.json  transfer_learning.json
configs/toml/: PARAMS.md  SCORING.md  example.toml  molformer.smi  sampling.toml  scoring.toml  scoring_components_example.toml  stage1_scoring.toml  staged_learning.toml  transfer_learning.toml
contrib/notebooks/: Reinvent_DockStream_OpenEye.py
contrib/reinvent_plugins/components/: README.md  comp_mordred.py  comp_tdc.py  comp_unwanted_substructures.py  scoring.toml
contrib/tutorials/maize/: Analyze.py  README.md  WFViz.py  autodock_gpu.yaml  maize_global_config.toml
contrib/tutorials/synthsense/: NAMERXN_SETUP.md  README.md
notebooks/: README.md  Reinvent_Docking_OpenEye.ipynb  Reinvent_TLRL.py  Reinvent_demo.py  Reinvent_demotest.py  Reinvent_entrypoint.py  analyze_data.ipynb  args.py  convert_to_notebook.sh  display_tb.py  evaluate.py  prep_data.py  reinvent_entrypoint.py  run_RL.py  run_TL.py  run_rl.py  run_tl.py
notebooks/data/: tnks2.csv
priors/: README.md  sha512.sum
reinvent/: Reinvent.py  __init__.py  __main__.py  config_parse.py  logger.py  prior_registry.py  validation.py  version.py
reinvent/GB_GA/: GB_GA.py  README.md  __init__.py  crossover.py  mutate.py  run.py  run_GA.py
reinvent/chemistry/: __init__.py  conversions.py  descriptors.py  file_reader.py  logging.py  molecular_transformations.py  parallel.py  phys_chem_descriptors.py  similarity.py  tokens.py  utils.py
reinvent/chemistry/amino_acids/: amino_acids.py
reinvent/chemistry/enums/: __init__.py  component_specific_parameters_enum.py  descriptor_types_enum.py  filter_types_enum.py
reinvent/chemistry/library_design/: __init__.py  attachment_points.py  bond_maker.py  bond_mapper.py  failing_reactions_enumerator.py  fragment_filter.py  fragment_reaction_slice_enumerator.py  fragment_reactions.py  fragmented_molecule.py  molecular_descriptors_enum.py
reinvent/chemistry/link_invent/: attachment_point_modifier.py  bond_breaker.py  linker_descriptors.py  molecule_with_highlighting.py
reinvent/chemistry/standardization/: filter_configuration.py  filter_registry.py  filter_types_enum.py  rdkit_standardizer.py
reinvent/datapipeline/: __main__.py  logger.py  preprocess.py  tokens.py  validation.py
reinvent/datapipeline/filters/: __init__.py  chem.py  deduplicate.py  elements.py  regex.py
reinvent/datapipeline/normalizer/: __init__.py  custom.py  rdkit_standard.py
reinvent/models/: __init__.py  meta_data.py  model_mode_enum.py  model_parameter_enum.py
reinvent/models/linkinvent/: link_invent_model.py
reinvent/models/model_factory/: libinvent_adapter.py  linkinvent_adapter.py  model_adapter.py  mol2mol_adapter.py  pepinvent_adapter.py  reinvent_adapter.py  sample_batch.py  transformer_adapter.py
reinvent/models/mol2mol/: model.py
reinvent/models/reinvent/: utils.py
reinvent/models/transformer/: transformer.py
reinvent/models/utils/: __init__.py  consistify.py  parallel.py
reinvent/notebooks/: __init__.py  utils.py
reinvent/runmodes/: __init__.py  create_adapter.py  handler.py  setup_sampler.py
reinvent/runmodes/RL/: __init__.py  canonicalize.py  distance_penalty.py  learning.py  libinvent.py  linkinvent.py  mol2mol.py  pepinvent.py  reinvent.py  reward.py  run_staged_learning.py  terminators.py  validation.py
reinvent/runmodes/TL/: __init__.py  configurations.py  dtos.py  learning.py  libinvent.py  linkinvent.py  mol2mol.py  reinvent.py  run_transfer_learning.py  validation.py
reinvent/runmodes/create_model/: __init__.py  create_libinvent.py  create_linkinvent.py  create_mol2mol.py  create_reinvent.py  libinvent.py  linkinvent.py  mol2mol.py  reinvent.py  reinvent.toml
reinvent/runmodes/dtos/: __init__.py  dtos.py  helpers.py
reinvent/runmodes/reporter/: __init__.py  remote.py
reinvent/runmodes/samplers/: __init__.py  libinvent.py  linkinvent.py  mol2mol.py  params.py  pepinvent.py  reinvent.py  run_sampling.py  sampler.py  (+1 more)
reinvent/scoring/: __init__.py  compute_scores.py  config.py  importer.py  results.py  scorer.py  utils.py  validation.py
reinvent/utils/: __init__.py  cli.py  config_parse.py  helpers.py  logmon.py  prior_registry.py
reinvent_plugins/: mol_cache.py  normalize.py
reinvent_plugins/components/: add_tag.py  comp_atomcount.py  comp_chemprop.py  comp_custom_alerts.py  comp_dockstream.py  comp_external_process.py  comp_generic_rest.py  comp_icolos.py  comp_maize.py  comp_mmp.py  comp_protacvalidity.py  comp_qptuna.py  comp_reaction_filter.py  comp_testscore.py  component_results.py  run_program.py
reinvent_plugins/normalizers/: __init__.py  lilly_smiles.py  rdkit_smiles.py
support/: add_meta_data.py  compute_database_precendence.py  convert_r3_model.py  mk_links.sh  rm_links.sh  run-chemprop.py  run-predict.py  run-qsartuna.py  run-rascore.py
support/CAZP/: README.md  cazp_scoring.toml  config.yml  profile.json  run_cazp_local.sh  run_cazp_multi-node.sh
tests/: _scoring.csv  conftest.py  example_config.json  integration_tests_config_v4.json  test_data.py
tests/chemistry/: test_descriptors.py  test_general_chemistry.py  test_phys_chem_descriptors.py  test_similarity.py
tests/datapipeline/: test_percent.py  test_regex.py  test_unwanted_tokens.py
(+2984 files in other folders)
