[project]
name = "reinvent"  # Normalized according to https://packaging.python.org/en/latest/specifications/name-normalization/
#version = "4.0.0"  # Dynamic.
description = "Reinvent 4"
authors = [{name = "AstraZeneca"}]
maintainers = [{name = "Hannes Löffler", email = "hannes.loeffler@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = [
  "reinvent",
  "de novo drug design",
  "ai",
  "artificial intelligence",
  "molecules",
  "molecule generation",
  "linker design",
  "generative ai",
  "chemistry",
  "medicinal chemistry",
  "computational chemistry",
  "cheminformatics",
]
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Typing :: Typed",
]

dynamic = ["version"]

# We go quite defensive and add upper bounds,
# in case major version updates break backward compatibility.
dependencies = [
  "chemprop==1.5.2",
  "descriptastorus >=2.6.1,<3.0", # Hidden chemprop dependency
  "matplotlib >=3.7,<4",
  "mmpdb >=2.1,<3",
  "molvs >=0.1.1,<0.2",
  "numpy >=1.21,<2",
  "pandas >=2,<3",
  "protobuf==5.26.1",
  "pydantic >=2,<3",
  "python-dotenv==1.1.0",
  "PyYAML >=6.0",
  "rdkit >=2023",
  "requests >=2.28,<3",
  "tensorboard >=2,<3",
  "tomli >=2.0,<3",
  "torch==2.6.0", # requires --extra-index-url https://download.pytorch.org/whl/cuNNN
  "torchvision >0.20",
  "tqdm >=4.64,<5",
  "xarray==2025.3.0",
  "xxhash >=3,<4",
]

[project.optional-dependencies]
openeye = [
  "openEye-toolkits >=2023" # requires --extra-index-url https://pypi.anaconda.org/OpenEye/simple
]
isim = [
  "iSIM @ git+https://github.com/mqcomplab/iSIM.git",
]
all = [
  "reinvent[openeye,isim]"
]


[project.scripts]
reinvent = "reinvent.Reinvent:main_script"
reinvent_datapre = "reinvent.datapipeline.preprocess:main_script"


# FIXME: change urls for public release.
[project.urls]
homepage = "https://github.com/MolecularAI"
repository = "https://github.com/MolecularAI/Reinvent.git"
public-reposibory = "https://github.com/MolecularAI/Reinvent.git"  # Switch to a new repo?


[tool.setuptools]
include-package-data = true


[tool.setuptools.dynamic.version]
attr = "reinvent.version.__version__"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
where = [".", "configs"]
include = ["reinvent*"]
namespaces = true


[tool.setuptools.package-data]
"*" = ["*.pkl.gz"]


[tool.black]
line-length = 100
